# spj-korpus

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  EXPERIMENT_REPORT.md  LICENSE  PLAN.md  README.md  TRAINING_PLAN.md  pyproject.toml
app/: main.py
app/pages/: 01_1._Inventory.py  02_2._Pose_Extraction.py  03_3._EAF_Manager.py  04_4._Download.py  05_5._PreAnnotation.py  06_6._Subtitles.py  07_7._Training_Data.py  08_8._Training.py  09_9._Evaluation.py  10_10._Inference.py  10_Inference.py  11_11._Assistant.py  11_Assistant.py  12_12._AI_Review.py  12_AI_Review.py  1_Inventory.py  2_Pose_Extraction.py  3_EAF_Manager.py  4_Download.py  5_PreAnnotation.py  6_Subtitles.py  7_Training_Data.py  8_Training.py  9_Evaluation.py
collector/: .dockerignore  .env.example  .htaccess  Dockerfile  accessibility-statement.php  consent.php  docker-compose.yml  forgot-password.php  index.php  manifest.json  progress.php  record.php  reset-password.php  terms.php  thanks.php  themes.php  validate.php  verify-email.php
collector/admin/: index.php  logs.php  metrics.php  (+5 more)
data/: README.md
docs/: DPIA.md
templates/: spj_template.etf
tools/: augment_search.py  build_reference_manifests.py  compact_poses.py  download_partner_dict.py  download_reference_dict.py  download_vocab_videos.py  extract_and_cleanup.py  method_comparison.py  optimal_combo.py  organize_poses.py  overnight_conv1d.py  overnight_train.py  resume_conv1d.py  split_category_poses.py  split_kodifikacia_poses.py  train_5plus.py  train_conv1d_transfer.py  train_extended.py  train_multisource.py  train_sequential.py
(+113 files in other folders)
