[project]
name = "spj-korpus"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mediapipe>=0.10",
    "pose-format",
    "torch>=2.2",
    "transformers>=4.40",
    "datasets",
    "pympi-ling>=1.70",
    "ffmpeg-python",
    "pandas",
    "numpy",
    "tqdm",
    "streamlit>=1.35",
    "opencv-python",
    "yt-dlp>=2024.1",
    "psutil",
    "easyocr>=1.7",
    "ocrmac>=0.0.3; sys_platform == 'darwin'",
    "Pillow",
    "plotly",
    "scikit-learn>=1.3",
    "requests",
    "mlx-lm>=0.19; sys_platform == 'darwin'",
    "mcp[cli]>=1.26.0",
    "anthropic>=0.84.0",
    "faster-whisper>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spj"]
